chore: address comments